--- a/package.json
+++ b/package.json
@@ -5,10 +5,12 @@
   "main": "bot.js",
   "dependencies": {
     "body-parser": "^1.18.3",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "superagent": "^4.1.0"
   },
   "devDependencies": {},
   "scripts": {
+    "start": "node bot.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
